--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-vector-icons/feather": "^4.29.2",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-feather": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
